# fastcpy

./: Cargo.toml  README.md
benches/: slice_compare.rs
examples/: example.rs
src/: lib.rs
